fix overflow on columns visibility selector
*  fix overflow on columns visibility selector

--- a/src/components/Control/RoutesView/TripsDataGrid.scss
+++ b/src/components/Control/RoutesView/TripsDataGrid.scss
@@ -43,7 +43,7 @@ form.magnify {
     }
 }
 
-div.custom-panel-content {
+.MuiDataGrid-panelWrapper div.custom-panel-content:first-child {
     overflow: visible;
 }
 
